--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Dopefolio</title>
+    <title>ReginaldDev</title>
     <meta name="description" content="Portfolio Template for Developer" />
 
     <link rel="stylesheet" href="css/style.css" />
@@ -22,12 +22,12 @@
         <div class="header__logo-container">
           <div class="header__logo-img-cont">
             <img
-              src="./assets/png/john-doe.png"
-              alt="Ram Maheshwari Logo Image"
+              src="./assets/png/ReginaldFace (2).png"
+              alt="Reginaldo's face photo"
               class="header__logo-img"
             />
           </div>
-          <span class="header__logo-sub">John Doe</span>
+          <span class="header__logo-sub">Reginaldo Junior</span>
         </div>
         <div class="header__main">
           <ul class="header__links">
@@ -84,12 +84,10 @@
     </header>
     <section class="home-hero">
       <div class="home-hero__content">
-        <h1 class="heading-primary">Hey, My name is John Doe</h1>
+        <h1 class="heading-primary">Hey, My name is Reginaldo Junior</h1>
         <div class="home-hero__info">
           <p class="text-primary">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente solutions for
-            complex problems
+            A Curiosity-Oriented Developer building websites, web applications and finding bugs with automated testing. For the success of your product.
           </p>
         </div>
         <div class="home-hero__cta">
@@ -98,7 +96,7 @@
       </div>
       <div class="home-hero__socials">
         <div class="home-hero__social">
-          <a href="#" class="home-hero__social-icon-link">
+          <a href="https://www.linkedin.com/in/reginaldojunior89" class="home-hero__social-icon-link">
             <img
               src="./assets/png/linkedin-ico.png"
               alt="icon"
@@ -107,7 +105,7 @@
           </a>
         </div>
         <div class="home-hero__social">
-          <a href="#" class="home-hero__social-icon-link">
+          <a href="https://github.com/ReginaldDev" class="home-hero__social-icon-link">
             <img
               src="./assets/png/github-ico.png"
               alt="icon"
@@ -116,7 +114,7 @@
           </a>
         </div>
         <div class="home-hero__social">
-          <a href="#" class="home-hero__social-icon-link">
+          <a href="https://x.com/ReginaldDevTech" class="home-hero__social-icon-link">
             <img
               src="./assets/png/twitter-ico.png"
               alt="icon"
@@ -125,9 +123,9 @@
           </a>
         </div>
         <div class="home-hero__social">
-          <a href="#" class="home-hero__social-icon-link">
+          <a href="mailto:reginaldo.devtech@gmail.com" class="home-hero__social-icon-link">
             <img
-              src="./assets/png/yt-ico.png"
+              src="./assets/png/gmail-ico.png"
               alt="icon"
               class="home-hero__social-icon"
             />
@@ -135,7 +133,7 @@
         </div>
         <div class="home-hero__social">
           <a
-            href="#"
+            href="https://www.instagram.com/reginaldojr1989"
             class="home-hero__social-icon-link home-hero__social-icon-link--bd-none"
           >
             <img
@@ -155,8 +153,7 @@
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main">About Me</span>
           <span class="heading-sec__sub">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
+            Here you will find information about me, what I do and my current skills in terms of programming and technology
           </span>
         </h2>
         <div class="about__content">
@@ -164,21 +161,25 @@
             <h3 class="about__content-title">Get to know me!</h3>
             <div class="about__content-details">
               <p class="about__content-details-para">
-                Hey! It's
-                <strong>John Doe</strong>
-                and I'm a <strong> Frontend Web Developer </strong> located in
-                Los Angeles. I've done
-                <strong> remote </strong>
-                projects for agencies, consulted for startups, and collaborated
-                with talented people to create
-                <strong>digital products </strong>
-                for both business and consumer use.
+                Hello! It's
+                <strong>Reginaldo Junior</strong>
+                and I'm a <strong> Programming and technology student</strong> 
+                currently finishing my degree. I'm focused on
+                <strong>Web Development</strong>, through Front-end of websites and Web 
+                applications and <strong>Quality Assurance</strong>, through functional and 
+                non-functional testing, regression, etc...
+                Check out some of my work in the <strong>Projects</strong> section.
               </p>
               <p class="about__content-details-para">
-                I'm a bit of a digital product junky. Over the years, I've used
-                hundreds of web and mobile apps in different industries and
-                verticals. Feel free to
-                <strong>contact</strong> me here.
+                I like to share content related to what I've learned over the years in 
+                <strong>programming</strong> so that it can help others in the Development Community. 
+                Feel free to connect or follow me on <a href="https://www.linkedin.com/in/reginaldojunior89" target="_blank">Linkedin</a>
+                 where I post useful content 
+                related to development and programming.
+
+                I am open to <strong>job</strong> opportunities where I can contribute, learn and grow. 
+                If you have a good opportunity that matches my skills and experience, 
+                don't hesitate to <strong>contact</strong> me.
               </p>
             </div>
             <a href="./#contact" class="btn btn--med btn--theme dynamicBgClr"
@@ -191,15 +192,13 @@
               <div class="skills__skill">HTML</div>
               <div class="skills__skill">CSS</div>
               <div class="skills__skill">JavaScript</div>
-              <div class="skills__skill">React</div>
+              <div class="skills__skill">PHP</div>
+              <div class="skills__skill">Python</div>
+              <div class="skills__skill">SQL</div>
               <div class="skills__skill">SASS</div>
-              <div class="skills__skill">GIT</div>
-              <div class="skills__skill">Shopify</div>
-              <div class="skills__skill">Wordpress</div>
-              <div class="skills__skill">Google ADS</div>
-              <div class="skills__skill">Facebook Ads</div>
-              <div class="skills__skill">Android</div>
-              <div class="skills__skill">IOS</div>
+              <div class="skills__skill">GIT/GitHub</div>
+              <div class="skills__skill">Cypress</div> 
+              <div class="skills__skill">Scrum</div>
             </div>
           </div>
         </div>
@@ -210,81 +209,84 @@
         <h2 class="heading heading-sec heading-sec__mb-bg">
           <span class="heading-sec__main">Projects</span>
           <span class="heading-sec__sub">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
+            Some projects from my studies and jobs. I have any others in my GitHub repository Check it !To Live View click on image or click on Code View.
           </span>
         </h2>
 
         <div class="projects__content">
           <div class="projects__row">
             <div class="projects__row-img-cont">
-              <img
-                src="./assets/jpeg/project-mockup-example.jpeg"
-                alt="Software Screenshot"
-                class="projects__row-img"
-                loading="lazy"
-              />
+              <a href="https://reginalddev.github.io/projects-study/Login%20responsivo/" target="_blank">
+                <img
+                  src="./assets/jpeg/projetoLogin.png"
+                  alt="Software Screenshot"
+                  class="projects__row-img"
+                  loading="lazy"
+                />
+              </a>
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 1</h3>
+              <h3 class="projects__row-content-title">Login Page</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                Resposive Login page with HTML and CSS only.
               </p>
               <a
-                href="./project-1.html"
+                href="https://github.com/ReginaldDev/projects-study/tree/main/Login%20responsivo"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
-                >Case Study</a
+                >Code View</a
               >
             </div>
           </div>
           <div class="projects__row">
             <div class="projects__row-img-cont">
-              <img
-                src="./assets/jpeg/project-mockup-example.jpeg"
-                alt="Software Screenshot"
-                class="projects__row-img"
-                loading="lazy"
-              />
+              <a href="https://reginalddev.github.io/projects-study/Pizzaria/" target="_blank">
+                <img
+                  src="./assets/jpeg/ProjetoPizzaria.png"
+                  alt="Software Screenshot"
+                  class="projects__row-img"
+                  loading="lazy"
+                />
+              </a>
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 2</h3>
+              <h3 class="projects__row-content-title">Pizzeria Page</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                Page for a pizzeria, responsive, allowing you to place your order. Still under development, the backend still needs to be finished.
               </p>
               <a
-                href="./project-2.html"
+                href="https://github.com/ReginaldDev/projects-study/tree/main/Pizzaria"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
-                >Case Study</a
+                >Code View</a
               >
             </div>
           </div>
           <div class="projects__row">
             <div class="projects__row-img-cont">
-              <img
-                src="./assets/jpeg/project-mockup-example.jpeg"
-                alt="Software Screenshot"
-                class="projects__row-img"
-                loading="lazy"
-              />
+              <a href="https://reginalddev.github.io/CypressStudyTests/" target="_blank">
+                <img
+                  src="./assets/jpeg/ProjetoCypress.png"
+                  alt="Software Screenshot"
+                  class="projects__row-img"
+                  loading="lazy"
+                />
+              </a>
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 3</h3>
+              <h3 class="projects__row-content-title">Cypress Tests</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                Cypress form validation test: testing HTML forms, adding data and dates.
+                <br>Directory: 
+                <br>- /e2e: Test case scripts using Javascript.
+                <br>- /fixtures and /support: Common utility scripts and reusable functions to support testing projects.
+                <br>- /videos: video file from test cases.
               </p>
               <a
-                href="./project-3.html"
+                href="https://github.com/ReginaldDev/CypressStudyTests/tree/main/FormValidation/cypress"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
-                >Case Study</a
+                >Code View</a
               >
             </div>
           </div>
@@ -296,12 +298,12 @@
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main heading-sec__main--lt">Contact</span>
           <span class="heading-sec__sub heading-sec__sub--lt">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
+            To Contact me by submitting the form below and I will get back to you
+               as soon as possible
           </span>
         </h2>
         <div class="contact__form-container">
-          <form action="#" class="contact__form">
+          <form action="https://formspree.io/f/mbldaodq"  method= "POST" class="contact__form">
             <div class="contact__form-field">
               <label class="contact__form-label" for="name">Name</label>
               <input
@@ -351,35 +353,35 @@
               <span>Social</span>
             </h2>
             <div class="main-footer__social-cont">
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/reginaldojunior89">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/linkedin-ico.png"
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://github.com/ReginaldDev">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/github-ico.png"
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://x.com/ReginaldDevTech">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/twitter-ico.png"
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="mailto:reginaldo.devtech@gmail.com">
                 <img
                   class="main-footer__icon"
-                  src="./assets/png/yt-ico.png"
+                  src="./assets/png/gmail-ico.png"
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://www.instagram.com/reginaldojr1989">
                 <img
                   class="main-footer__icon main-footer__icon--mr-none"
                   src="./assets/png/insta-ico.png"
@@ -389,19 +391,18 @@
             </div>
           </div>
           <div class="main-footer__row main-footer__row-2">
-            <h4 class="heading heading-sm text-lt">John Doe</h4>
+            <h4 class="heading heading-sm text-lt">Reginaldo Junior</h4>
             <p class="main-footer__short-desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit facilis
-              tempora explicabo quae quod deserunt
+              A Web developer focused on FrontEnd, building the FrontEnd of websites, Web applications and testing them until the product is successful.
             </p>
           </div>
         </div>
 
         <!-- If you give me some credit or shoutout here by linking to my website, then it will be a big thing for me and will help me a lot :) -->
         <div class="main-footer__lower">
-          &copy; Copyright 2021. Made by
-          <a rel="noreferrer" target="_blank" href="https://rammaheshwari.com"
-            >Ram Maheshwari</a
+          &copy; Copyright 2025. Made by
+          <a rel="noreferrer" target="_blank" href="#"
+            >Reginaldo Junior</a
           >
         </div>
       </div>
