news project in the page

--- a/index.html
+++ b/index.html
@@ -216,9 +216,9 @@
         <div class="projects__content">
           <div class="projects__row">
             <div class="projects__row-img-cont">
-              <a href="https://reginalddev.github.io/projects-study/Login%20responsivo/" target="_blank">
+              <a href="https://reginalddev.github.io/projects-study/CRUD-ToDoList" target="_blank">
                 <img
-                  src="./assets/jpeg/projetoLogin.png"
+                  src="./assets/jpeg/ToDoListView.jpg"
                   alt="Software Screenshot"
                   class="projects__row-img"
                   loading="lazy"
@@ -226,12 +226,12 @@
               </a>
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Login Page</h3>
+              <h3 class="projects__row-content-title">To Do List</h3>
               <p class="projects__row-content-desc">
-                Resposive Login page with HTML and CSS only.
+                This is a simple CRUD development wiht HTML, CSS and Javascript.
               </p>
               <a
-                href="https://github.com/ReginaldDev/projects-study/tree/main/Login%20responsivo"
+                href="https://github.com/ReginaldDev/projects-study/tree/main/CRUD-ToDoList"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >Code View</a
