--- a/index.html
+++ b/index.html
@@ -212,8 +212,37 @@
             Some projects from my studies and jobs. I have any others in my GitHub repository Check it !To Live View click on image or click on Code View.
           </span>
         </h2>
-
+        
         <div class="projects__content">
+          <div class="projects__row">
+            <div class="projects__row-img-cont">
+              <a href="https://www.testfybrasil.com" target="_blank">
+                <img
+                  src="./assets/jpeg/landingPageTestfy.jpg"
+                  alt="Software Screenshot"
+                  class="projects__row-img"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">Landing Page</h3>
+              <p class="projects__row-content-desc">
+                The "homePage_Testfy" project is a web application designed as a personal 
+                portfolio to showcase the author's professional information and projects. 
+                The structure consists of HTML files for content and layout, CSS for styling,
+                 and JavaScript for interactive features. The repository includes an "assets" 
+                 folder that stores resources like images and other media files used on the page. 
+                 Additionally, there is an "index.html" file that likely serves as the main page of the portfolio..
+              </p>
+              <a
+                href="https://github.com/ReginaldDev/homePage_Testfy"
+                class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank"
+                >Code View</a
+              >
+            </div>
+          </div>
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <a href="https://reginalddev.github.io/projects-study/CRUD-ToDoList" target="_blank">
