--- a/index.html
+++ b/index.html
@@ -245,9 +245,9 @@
           </div>
           <div class="projects__row">
             <div class="projects__row-img-cont">
-              <a href="https://reginalddev.github.io/projects-study/CRUD-ToDoList" target="_blank">
+              <a href="https://reginalddev.github.io/InsightSales/" target="_blank">
                 <img
-                  src="./assets/jpeg/ToDoListView.jpg"
+                  src="./assets/jpeg/analisePython.jpg"
                   alt="Software Screenshot"
                   class="projects__row-img"
                   loading="lazy"
@@ -255,12 +255,13 @@
               </a>
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">To Do List</h3>
+              <h3 class="projects__row-content-title">InsightSales - Sales Analysis Dashboard with Python and Streamlit</h3>
               <p class="projects__row-content-desc">
-                This is a simple CRUD development wiht HTML, CSS and Javascript.
+                An interactive sales dashboard project that showcases ETL (Extract, Transform, Load), data analysis, and visualization techniques. The application uses Python, SQL Server, and Streamlit to present key sales indicators such as revenue trends, top-selling products, and category performance. This project highlights skills in database modeling, data manipulation with Pandas, and web-based dashboards for business intelligence.
+                <br><br><strong>Technologies:</strong> Python · SQL Server · Pandas · Matplotlib · Seaborn · Streamlit.
               </p>
               <a
-                href="https://github.com/ReginaldDev/projects-study/tree/main/CRUD-ToDoList"
+                href="https://github.com/ReginaldDev/InsightSales"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >Code View</a
@@ -269,9 +270,9 @@
           </div>
           <div class="projects__row">
             <div class="projects__row-img-cont">
-              <a href="https://reginalddev.github.io/projects-study/Pizzaria/" target="_blank">
+              <a href="https://reginalddev.github.io/consulta-cep/" target="_blank">
                 <img
-                  src="./assets/jpeg/ProjetoPizzaria.png"
+                  src="./assets/jpeg/CepAPIJava.jpg"
                   alt="Software Screenshot"
                   class="projects__row-img"
                   loading="lazy"
@@ -279,12 +280,13 @@
               </a>
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Pizzeria Page</h3>
+              <h3 class="projects__row-content-title">Consulta CEP API - Address Lookup REST API with Java and Spring Boot</h3>
               <p class="projects__row-content-desc">
-                Page for a pizzeria, responsive, allowing you to place your order. Still under development, the backend still needs to be finished.
+                A REST API developed with Spring Boot that retrieves address information based on Brazilian postal codes (CEP) by integrating the ViaCEP service. The project also includes a simple web interface for performing CEP lookups via a browser. It demonstrates skills in building RESTful services, consuming external APIs, and delivering a functional web frontend with Java.
+                <br><br><strong>Technologies:</strong> Java · Spring Boot · Maven · ViaCEP API
               </p>
               <a
-                href="https://github.com/ReginaldDev/projects-study/tree/main/Pizzaria"
+                href="https://github.com/ReginaldDev/consulta-cep"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >Code View</a
@@ -293,9 +295,9 @@
           </div>
           <div class="projects__row">
             <div class="projects__row-img-cont">
-              <a href="https://reginalddev.github.io/CypressStudyTests/" target="_blank">
+              <a href="https://reginalddev.github.io/CSharp-CRUD-API/" target="_blank">
                 <img
-                  src="./assets/jpeg/ProjetoCypress.png"
+                  src="./assets/jpeg/CrudCSharp.jpg"
                   alt="Software Screenshot"
                   class="projects__row-img"
                   loading="lazy"
@@ -303,16 +305,38 @@
               </a>
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Cypress Tests</h3>
+              <h3 class="projects__row-content-title">CRUD API - Product Management System with C# and SQL Server</h3>
               <p class="projects__row-content-desc">
-                Cypress form validation test: testing HTML forms, adding data and dates.
-                <br>Directory: 
-                <br>- /e2e: Test case scripts using Javascript.
-                <br>- /fixtures and /support: Common utility scripts and reusable functions to support testing projects.
-                <br>- /videos: video file from test cases.
+                A full-stack CRUD system using ASP.NET Core Web API and a C# terminal client to manage product records. The project demonstrates building RESTful APIs with Entity Framework Core connected to SQL Server, along with a console application for interacting with the API. It showcases skills in backend development, database integration, and API consumption using .NET technologies.
+                <br><br><strong>Technologies:</strong> C# · ASP.NET Core · Entity Framework Core · SQL Server · .NET Console App
               </p>
               <a
-                href="https://github.com/ReginaldDev/CypressStudyTests/tree/main/FormValidation/cypress"
+                href="https://github.com/ReginaldDev/CSharp-CRUD-API"
+                class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank"
+                >Code View</a
+              >
+            </div>
+          </div>
+          <div class="projects__row">
+            <div class="projects__row-img-cont">
+              <a href="https://reginalddev.github.io/RockshaverAPI/" target="_blank">
+                <img
+                  src="./assets/jpeg/APICYPRESSTEST.png"
+                  alt="Software Screenshot"
+                  class="projects__row-img"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">RockshaverAPI - Automated API Testing with Cypress</h3>
+              <p class="projects__row-content-desc">
+                A project focused on automated API testing using Cypress, Mocha, and Chai. It validates the Rockshaver API endpoints through end-to-end tests covering CRUD operations and reminders. The tests can be executed locally or within a Docker container for isolated environments. The repository demonstrates skills in API testing automation, JavaScript testing frameworks, and Docker usage.
+                <br><br><strong>Technologies:</strong> Cypress · Node.js · Mocha · Chai · Docker
+              </p>
+              <a
+                href="https://github.com/ReginaldDev/RockshaverAPI"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >Code View</a
