--- a/index.html
+++ b/index.html
@@ -245,6 +245,32 @@
           </div>
           <div class="projects__row">
             <div class="projects__row-img-cont">
+              <a href="https://angular-task-helper.vercel.app/" target="_blank">
+                <img
+                  src="./assets/jpeg/AngularProject.jpg"
+                  alt="Software Screenshot"
+                  class="projects__row-img"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">Angular- Task Helper</h3>
+              <p class="projects__row-content-desc">
+                Tarefa Helper - AI-powered Homework Assistant with Angular and Gemini
+                A web application that leverages AI to assist students with school homework by answering their questions quickly and intuitively. Built with Angular and integrated with Google Gemini API for content generation, the app provides a modern, responsive interface with real-time feedback. It demonstrates skills in frontend development, AI API integration, and cloud deployment with Vercel.
+                <br><br><strong>Technologies:</strong> Angular · TypeScript · Google Gemini API · HTML5 · CSS3 · Vercel
+              </p>
+              <a
+                href="https://github.com/ReginaldDev/Angular-TaskHelper"
+                class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank"
+                >Code View</a
+              >
+            </div>
+          </div>
+          <div class="projects__row">
+            <div class="projects__row-img-cont">
               <a href="https://reginalddev.github.io/InsightSales/" target="_blank">
                 <img
                   src="./assets/jpeg/analisePython.jpg"
