--- a/index.html
+++ b/index.html
@@ -192,7 +192,10 @@
               <div class="skills__skill">HTML</div>
               <div class="skills__skill">CSS</div>
               <div class="skills__skill">JavaScript</div>
+              <div class="skills__skill">Robot FrameWork</div>
+              <div class="skills__skill">Java</div>
               <div class="skills__skill">PHP</div>
+              <div class="skills__skill">C#/.Net</div>
               <div class="skills__skill">Python</div>
               <div class="skills__skill">SQL</div>
               <div class="skills__skill">SASS</div>
