feat: Changes for QA portifolio

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <h1 class="heading-primary">Hey, My name is Reginaldo Junior</h1>
         <div class="home-hero__info">
           <p class="text-primary">
-            A Curiosity-Oriented Developer building websites, web applications and finding bugs with automated testing. For the success of your product.
+            <i>A detail-oriented <strong>Software QA Analyst</strong> ensuring product success by finding critical bugs through meticulous manual and automated testing..</i>
           </p>
         </div>
         <div class="home-hero__cta">
@@ -161,25 +161,13 @@
             <h3 class="about__content-title">Get to know me!</h3>
             <div class="about__content-details">
               <p class="about__content-details-para">
-                Hello! It's
+                Hello! I'm
                 <strong>Reginaldo Junior</strong>
-                and I'm a <strong> Programming and technology student</strong> 
-                currently finishing my degree. I'm focused on
-                <strong>Web Development</strong>, through Front-end of websites and Web 
-                applications and <strong>Quality Assurance</strong>, through functional and 
-                non-functional testing, regression, etc...
-                Check out some of my work in the <strong>Projects</strong> section.
-              </p>
-              <p class="about__content-details-para">
-                I like to share content related to what I've learned over the years in 
-                <strong>programming</strong> so that it can help others in the Development Community. 
-                Feel free to connect or follow me on <a href="https://www.linkedin.com/in/reginaldojunior89" target="_blank">Linkedin</a>
-                 where I post useful content 
-                related to development and programming.
-
-                I am open to <strong>job</strong> opportunities where I can contribute, learn and grow. 
-                If you have a good opportunity that matches my skills and experience, 
-                don't hesitate to <strong>contact</strong> me.
+                ,a detail-oriented <strong> Software QA Analyst </strong> 
+                with a solid foundation in technology and software development.
+                <br>My journey into tech comes after a successful <strong>10+ year career in business management</strong>, where I honed my skills in data analysis, process optimization, and understanding business needs from the ground up. I decided to pivot my career to technology, driven by a passion for ensuring that software is not only functional but also reliable and valuable to the end-user.  
+                <br>Today, I combine my business acumen with hands-on technical skills in <strong>manual and automated testing</strong>. My core focus is on Quality Assurance, where I apply my analytical mindset to design comprehensive test plans, identify critical bugs, and collaborate with development teams to enhance product quality. While I am proficient in web technologies like HTML/CSS, JavaScript, Node.Js and SQL. I use this knowledge to write more effective and robust automated tests in frameworks like <strong>Cypress</strong>.
+                I am passionate about continuous learning and am always exploring new tools and methodologies to improve quality processes. I'm currently seeking a full-time opportunity where I can contribute to building high-quality software. Feel free to connect with me on <a href="https://www.linkedin.com/in/reginaldojunior89" target="_blank"><strong><i>Linkedin</i></strong></a> or check out my projects!
               </p>
             </div>
             <a href="./#contact" class="btn btn--med btn--theme dynamicBgClr"
@@ -187,21 +175,42 @@
             >
           </div>
           <div class="about__content-skills">
-            <h3 class="about__content-title">My Skills</h3>
+            <h3 class="about__content-title">QA & Test Automation</h3>
+            <div class="skills">
+              <div class="skills__skill">Cypress</div>
+              <div class="skills__skill">Manual Testing</div>
+              <div class="skills__skill">Functional Testing</div>
+              <div class="skills__skill">Robot FrameWork</div>
+              <div class="skills__skill">Regression Testing</div>
+              <div class="skills__skill">API Testing</div>
+              <div class="skills__skill">Postman</div>
+              <div class="skills__skill">Swagger</div>
+              <div class="skills__skill">K6</div>
+              <div class="skills__skill">Performance Testing</div>
+            </div>
+            <h3 class="about__content-title">Programming Languages & Web</h3>
             <div class="skills">
               <div class="skills__skill">HTML</div>
               <div class="skills__skill">CSS</div>
               <div class="skills__skill">JavaScript</div>
-              <div class="skills__skill">Robot FrameWork</div>
               <div class="skills__skill">Java</div>
               <div class="skills__skill">PHP</div>
               <div class="skills__skill">C#/.Net</div>
               <div class="skills__skill">Python</div>
               <div class="skills__skill">SQL</div>
-              <div class="skills__skill">SASS</div>
-              <div class="skills__skill">GIT/GitHub</div>
-              <div class="skills__skill">Cypress</div> 
+              <div class="skills__skill">SASS</div> 
+              <div class="skills__skill">Bootstrap</div>
+              <div class="skills__skill">Tailwind</div>
+              <div class="skills__skill">Vue.Js</div>
+              <div class="skills__skill">React</div>
+            </div>
+            <h3 class="about__content-title">Tools & Platforms</h3>
+            <div class="skills">
+              <div class="skills__skill">Git/GitHub</div>
+              <div class="skills__skill">Jira</div> 
               <div class="skills__skill">Scrum</div>
+              <div class="skills__skill">PowerBI</div>
+              <div class="skills__skill">Excel</div>
             </div>
           </div>
         </div>
