feat: new project

--- a/index.html
+++ b/index.html
@@ -225,6 +225,23 @@
         </div>
         <div class="projects__row">
           <div class="projects__row-img-cont">
+            <a href="https://reginalddev.github.io/webdojo/" target="_blank">
+              <img src="./assets/png/webdojo-view.png" alt="Software Screenshot" class="projects__row-img"
+                loading="lazy" />
+            </a>
+          </div>
+          <div class="projects__row-content">
+            <h3 class="projects__row-content-title">Web Dojo - Automated Testing with Cypress</h3>
+            <p class="projects__row-content-desc">
+              This project showcases a suite of end-to-end (E2E) tests developed for the 'Web Dojo' web application. Using the Cypress framework, a series of automated tests were created to validate the platform's critical functionalities, including navigation, form submissions, and the responsiveness of UI components. The goal of this project is to demonstrate skills in creating a structured and maintainable testing environment, writing efficient test scripts, and ensuring the quality and reliability of a front-end application.
+              <br><br><strong>Technologies:</strong> Cypress · Node.js · Javascript · E2E Testing · Docker
+            </p>
+            <a href="https://github.com/ReginaldDev/webdojo" class="btn btn--med btn--theme dynamicBgClr"
+              target="_blank">Code View</a>
+          </div>
+        </div>
+        <div class="projects__row">
+          <div class="projects__row-img-cont">
             <a href="https://www.testfybrasil.com" target="_blank">
               <img src="./assets/png/lp-testfy-view.png" alt="Software Screenshot" class="projects__row-img"
                 loading="lazy" />
@@ -301,26 +318,6 @@
               Console App
             </p>
             <a href="https://github.com/ReginaldDev/CSharp-CRUD-API" class="btn btn--med btn--theme dynamicBgClr"
-              target="_blank">Code View</a>
-          </div>
-        </div>
-        <div class="projects__row">
-          <div class="projects__row-img-cont">
-            <a href="https://reginalddev.github.io/RockshaverAPI/" target="_blank">
-              <img src="./assets/jpeg/APICYPRESSTEST.png" alt="Software Screenshot" class="projects__row-img"
-                loading="lazy" />
-            </a>
-          </div>
-          <div class="projects__row-content">
-            <h3 class="projects__row-content-title">RockshaverAPI - Automated API Testing with Cypress</h3>
-            <p class="projects__row-content-desc">
-              A project focused on automated API testing using Cypress, Mocha, and Chai. It validates the Rockshaver API
-              endpoints through end-to-end tests covering CRUD operations and reminders. The tests can be executed
-              locally or within a Docker container for isolated environments. The repository demonstrates skills in API
-              testing automation, JavaScript testing frameworks, and Docker usage.
-              <br><br><strong>Technologies:</strong> Cypress · Node.js · Mocha · Chai · Docker
-            </p>
-            <a href="https://github.com/ReginaldDev/RockshaverAPI" class="btn btn--med btn--theme dynamicBgClr"
               target="_blank">Code View</a>
           </div>
         </div>
