--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>ReginaldDev</title>
   <meta name="description" content="Portfolio Template for Developer" />
-
+  <link rel="icon" href="./assets/png/bug.png" type="image/png">
   <link rel="stylesheet" href="css/style.css" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
